fixed button search

--- a/index1.html
+++ b/index1.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="button-search padding10-30-30">
-                <input type="submit" value="TÌM KIẾM" class="padding20">
+                <button class="fn16 fnAsapRegular colorWhite text-upper backGroundRed text-upper width100per padding20">tìm kiếm</button>
             </div>
         </div>
     </div>
