--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="nhadatban.html">Nha dat ban</a>
     <a href="video_category.html">Video category</a>
     <a href="naptien.html">Nap tien</a>
+    <a href="duan.html">Du an</a>
 </body>
 </html>
