--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@
     <form action="" class="input-form mgTop30" method="post">
         <input type="text" placeholder="Tên đăng nhập (*)">
         <input type="password" placeholder="Mật khẩu (*)">
-        <div class="input-checkbox flex itemsCenter">
+        <div class="input-checkbox">
             <input type="checkbox" class="verMiddle" name="is_remember"> &nbsp; <span class="text-upper fnAsapRegular fn16 colorBlack">Ghi nhớ mật khẩu</span>
             <a href="" class="fn16 fnAsapRegular colorYellow text-upper floatRight">Quên mật khẩu?</a>
         </div>
@@ -106,7 +106,7 @@
 
 </div>
 
-<footer class="mgTop30">
+<footer>
     <div class="head-slider padding30-15">
         <h3 class="fn13 fnAsapRegular colorWhite"><i data-icon="k" class="icon"></i> &nbsp; Phiên bản Desktop</h3>
         <div class="title-news">
