--- a/profile.html
+++ b/profile.html
@@ -79,37 +79,12 @@
         <div class="header-right"><a href=""><i class="icon-user"></i></a></div>
     </div>
 </header>
-<div class="padding30-15 backgroundWhite">
-    <h3 class="fnAsapRegular fn24 colorRed text-upper mgTop30"><i data-icon="k" class="icon verMiddle"></i>&nbsp;  nạp tiền vào tài khoản</h3>
-    <div class="text-center padding0-60">
-        <img class="mgTop100" src="assets/images/homepage/charge.png" alt="Charge money">
-        <h3 class="mgTop30 fn21 fnAsapMedium colorBlack text-upper">Vui lòng liên hệ công ty để nạp tiền vào tài khoản của bạn</h3>
-        <h3 class="mgTop30 fn21 fnAsapMedium colorRed text-upper">hotline: 1900 xxx</h3>
-        <hr class="borderDashed mgTop30">
-        <div class="text-left">
-            <h3 class="mgTop30 fn21 fnAsapBold text-upper">CÔNG TY CỔ PHẦN TẬP ĐOÀN TUỆ MINH</h3>
-            <h3 class="mgTop30 fn21 fnAsapMedium colorYellow text-upper">Khu vực Hồ chí mính</h3>
-            <div class="mgTop15 width100per disInLineBlock">
-                <i class="icon icon-map floatLeft mgTop3"></i><span class="fn13 fnAsapRegular colorBlack floatLeft">&nbsp;  Toà nhà Cienco 585, Số 88 - 88A, <br>&nbsp;   Đường D2, P25, Quận Bình Thạnh, Tp HCM</span>
-            </div>
-            <div class="mgTop15 width100per disInLineBlock">
-                <i data-icon="1"  class="icon floatLeft mgTop3"></i><span class="fn13 fnAsapRegular colorBlack floatLeft">&nbsp;  0868 186 039 - 0939 8686 97</span>
-            </div>
-            <div class="mgTop15 width100per disInLineBlock">
-                <i class="icon icon-mail floatLeft mgTop2"></i><span class="fn13 fnAsapRegular colorBlack floatLeft">&nbsp;  info@tueminhgroup.com.vn</span>
-            </div>
-
-            <h3 class="mgTop30 fn21 fnAsapMedium colorYellow text-upper mgTop30">Khu vực Hà nội</h3>
-            <div class="mgTop15 width100per disInLineBlock">
-                <i class="icon icon-map floatLeft mgTop3"></i><span class="fn13 fnAsapRegular colorBlack floatLeft">&nbsp;  Toà nhà Cienco 585, Số 88 - 88A, <br>&nbsp;   Đường D2, P25, Quận Bình Thạnh, Tp HCM</span>
-            </div>
-            <div class="mgTop15 width100per disInLineBlock">
-                <i data-icon="1"  class="icon floatLeft mgTop3"></i><span class="fn13 fnAsapRegular colorBlack floatLeft">&nbsp;  0868 186 039 - 0939 8686 97</span>
-            </div>
-            <div class="mgTop15 width100per disInLineBlock">
-                <i class="icon icon-mail floatLeft mgTop2"></i><span class="fn13 fnAsapRegular colorBlack floatLeft">&nbsp;  info@tueminhgroup.com.vn</span>
-            </div>
-        </div>
+<div class="padding30 text-center backgroundBlack">
+    <img src="" alt="" class="verMiddle">
+    <div class="verMiddle">
+        <h3 class="fn21 fnAsapMedium colorWhite">Nguyễn Thị Thanh Vy</h3>
+        <p></p>
+        <p class="fn16 fnAsapMedium colorWhite">22/05/2016</p>
     </div>
 </div>
 
