--- a/registry.html
+++ b/registry.html
@@ -112,7 +112,7 @@
 
 </div>
 
-<footer class="mgTop30">
+<footer>
     <div class="head-slider padding30-15">
         <h3 class="fn13 fnAsapRegular colorWhite"><i data-icon="k" class="icon"></i> &nbsp; Phiên bản Desktop</h3>
         <div class="title-news">
