fix block du an

--- a/duan.html
+++ b/duan.html
@@ -233,14 +233,16 @@
                                 : 46</h3>
                         </div>
                     </div>
-                    <div class="block-info">
-                        <h3 class="fnAsapMedium fn16 text-upper">CĂN HỘ NEWCITY QUẬN 2</h3>
-                        <p class="fnAsapMedium fn13 colorNor mgTop15">Cuộc sống đỉnh cao cùng căn hộ Newcity trung tâm Quận 2 - Hãy đến để cảm nhận & không bỏ lỡ cơ hội vàng sở hữu ngay hôm nay.</p>
-                        <div class="flex itemsCenter width100per">
-                            <p class="fnAsapMedium fn16 text-upper colorRed mgTop15"><i class="icon icon-dollar verMiddle"></i>Giá: 1,4 tỷ/căn</p>
-                            <p class="fnAsapMedium fn16 text-upper mgTop15"><i data-icon="I" class="icon verMiddle"></i> Quy mô: 200 ha</p>
-                            <p class="fnAsapMedium fn16 text-upper mgTop15"><i data-icon="i" class="icon verMiddle"></i>Quận 2 - hồ chí minh</p>
-                        </div>
+                    <h3 class="fnAsapMedium fn16 text-upper padding15">CĂN HỘ NEWCITY QUẬN 2</h3>
+                    <p class="fnAsapMedium fn13 colorNor mgTop15 padding0-15">Cuộc sống đỉnh cao cùng căn hộ Newcity trung tâm Quận
+                        2 - Hãy đến để cảm nhận & không bỏ lỡ cơ hội vàng sở hữu ngay hôm nay.</p>
+                    <div class="flex itemsCenter width100per padding0-15 mgTop15">
+                        <p class="fnAsapMedium fn16 text-upper colorRed mgTop15"><i
+                                class="icon icon-dollar verMiddle"></i>Giá: 1,4 tỷ/căn</p>
+                        <p class="fnAsapMedium fn16 text-upper mgTop15"><i data-icon="I" class="icon verMiddle"></i> Quy
+                            mô: 200 ha</p>
+                        <p class="fnAsapMedium fn16 text-upper mgTop15"><i data-icon="i" class="icon verMiddle"></i>Quận
+                            2 - hồ chí minh</p>
                     </div>
                 </div>
             </div>
@@ -254,12 +256,14 @@
         <div class="block-right padding18-12">
             <div class="block-right-inner">
                 <div class="block-right-inner-title fnAsapMedium fn14 colorBlack">
-                    Celadon City công viên 160.000 m2 +  tiện ích hoàn thiện 100%, tham quan nhà mẫu
+                    Celadon City công viên 160.000 m2 + tiện ích hoàn thiện 100%, tham quan nhà mẫu
                 </div>
             </div>
             <h3 class="fnAsapBold fn14 mgTop15"><i data-icon="A" class="icon"></i> &nbsp;03/11/2017 - 03/12/2017</h3>
-            <p class="fnAsapMedium fn16 text-upper colorRed mgTop15"><i class="icon icon-dollar"></i> Giá: 6,8 tỷ/căn</p>
-            <p class="fnAsapMedium mgTop15 text-upper colorBrown"><span><i class="icon icon-navigation"></i>&nbsp; diện tích: 75m2</span><span><i data-icon="i" class="icon"></i> Tân Phú - Hồ Chí Minh</span></p>
+            <p class="fnAsapMedium fn16 text-upper colorRed mgTop15"><i class="icon icon-dollar"></i> Giá: 6,8 tỷ/căn
+            </p>
+            <p class="fnAsapMedium mgTop15 text-upper colorBrown"><span><i class="icon icon-navigation"></i>&nbsp; diện tích: 75m2</span><span><i
+                    data-icon="i" class="icon"></i> Tân Phú - Hồ Chí Minh</span></p>
         </div>
     </div>
     <div class="block mgTop15 padding0-30">
@@ -267,12 +271,14 @@
         <div class="block-right padding18-12">
             <div class="block-right-inner">
                 <div class="block-right-inner-title fnAsapMedium fn14 colorBlack">
-                    Celadon City công viên 160.000 m2 +  tiện ích hoàn thiện 100%, tham quan nhà mẫu
+                    Celadon City công viên 160.000 m2 + tiện ích hoàn thiện 100%, tham quan nhà mẫu
                 </div>
             </div>
             <h3 class="fnAsapBold fn14 mgTop15"><i data-icon="A" class="icon"></i> &nbsp;03/11/2017 - 03/12/2017</h3>
-            <p class="fnAsapMedium fn16 text-upper colorRed mgTop15"><i class="icon icon-dollar"></i> Giá: 6,8 tỷ/căn</p>
-            <p class="fnAsapMedium mgTop15 text-upper colorBrown"><span><i class="icon icon-navigation"></i>&nbsp; diện tích: 75m2</span><span><i data-icon="i" class="icon"></i> Tân Phú - Hồ Chí Minh</span></p>
+            <p class="fnAsapMedium fn16 text-upper colorRed mgTop15"><i class="icon icon-dollar"></i> Giá: 6,8 tỷ/căn
+            </p>
+            <p class="fnAsapMedium mgTop15 text-upper colorBrown"><span><i class="icon icon-navigation"></i>&nbsp; diện tích: 75m2</span><span><i
+                    data-icon="i" class="icon"></i> Tân Phú - Hồ Chí Minh</span></p>
         </div>
     </div>
 </div>
