--- a/nhadatban.html
+++ b/nhadatban.html
@@ -173,8 +173,8 @@
                     </select>
                 </div>
             </div>
-            <div class="button-search padding10-30-30">
-                <input type="submit" value="tìm kiếm ngay" class="padding20 text-upper backGroundYellow">
+            <div class="button-search padding10-30-30 text-center">
+                <a href="#" class="padding20 text-upper backGroundYellow colorWhite disBlock">tìm kiếm ngay</a>
             </div>
         </div>
     </div>
