--- a/duan.html
+++ b/duan.html
@@ -105,18 +105,18 @@
             <div class="flex justCenter mgTop30">
                 <div class="project-left-inner width34per text-center colorYellow">
                     <i class="icon icon-calendar-tick fn60 mgTop3"></i>
-                    <p class="fnMyriad fn24 text-upper mgTop3">Thời gian bàn giao</p>
-                    <p class="fnMyriad fn24 text-upper mgTop3">2017</p>
+                    <p class="fnAsapRegular fn24 text-upper mgTop3">Thời gian bàn giao</p>
+                    <p class="fnAsapRegular fn24 text-upper mgTop3">2017</p>
                 </div>
                 <div class="project-left-inner width34per text-center colorYellow">
                     <i class="icon icon-pie-chart fn60 mgTop3"></i>
-                    <p class="fnMyriad fn24 text-upper mgTop3">Quy mô</p>
-                    <p class="fnMyriad fn24 text-upper mgTop3">198 ha</p>
+                    <p class="fnAsapRegular fn24 text-upper mgTop3">Quy mô</p>
+                    <p class="fnAsapRegular fn24 text-upper mgTop3">198 ha</p>
                 </div>
                 <div class="project-left-inner width32per text-center colorYellow">
                     <i data-icon="z" class="icon fn60"></i>
-                    <p class="fnMyriad fn24 text-upper mgTop3">Pháp lý</p>
-                    <p class="fnMyriad fn24 text-upper mgTop3">Sổ hồng</p>
+                    <p class="fnAsapRegular fn24 text-upper mgTop3">Pháp lý</p>
+                    <p class="fnAsapRegular fn24 text-upper mgTop3">Sổ hồng</p>
                 </div>
             </div>
         </div>
