--- a/home_new.html
+++ b/home_new.html
@@ -107,14 +107,18 @@
 </div>
 
 <div class="wrapper-video padding30-15">
-    <h3 class="fnAsapRegular fn21 text-upper"><i data-icon="/" class="icon verMiddle colorRed2"></i>&nbsp; tin video nổi
+    <h3 class="fnAsapRegular fn21 text-upper"><i data-icon="/" class="icon verMiddle colorRed2 fn34"></i>&nbsp; tin video nổi
         bật</h3>
     <div class="mgTop30">
         <div class="swiper-container swiper-container-video ">
             <div class="swiper-wrapper swiper-wrapper-video">
                 <div class="block-slider swiper-slide swiper-slide-video mgRight">
                     <div class="block-slider-inner">
-                        <img src="assets/images/slider/slider_02.jpg" alt="Slider" width="100%">
+                        <video width="100%" controls>
+                            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                            <source src="https://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+                            Your browser does not support HTML5 video.
+                        </video>
                         <div class="block-info padding20-46-30-15 backgroundWhite">
                             <h3 class="fnAsapRegular fn16">Laperla Villas Resort - Thiên
                                 đường nghỉ dưỡng Phan Thiết </h3>
@@ -124,7 +128,11 @@
                 </div>
                 <div class="block-slider swiper-slide swiper-slide-video mgRight">
                     <div class="block-slider-inner">
-                        <img src="assets/images/slider/slider_02.jpg" alt="Slider" width="100%">
+                        <video width="100%" controls>
+                            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                            <source src="https://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+                            Your browser does not support HTML5 video.
+                        </video>
                         <div class="block-info padding20-46-30-15 backgroundWhite">
                             <h3 class="fnAsapRegular fn16">Laperla Villas Resort - Thiên
                                 đường nghỉ dưỡng Phan Thiết </h3>
@@ -134,7 +142,11 @@
                 </div>
                 <div class="block-slider swiper-slide swiper-slide-video mgRight">
                     <div class="block-slider-inner">
-                        <img src="assets/images/slider/slider_02.jpg" alt="Slider" width="100%">
+                        <video width="100%" controls>
+                            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                            <source src="https://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+                            Your browser does not support HTML5 video.
+                        </video>
                         <div class="block-info padding20-46-30-15 backgroundWhite">
                             <h3 class="fnAsapRegular fn16">Laperla Villas Resort - Thiên
                                 đường nghỉ dưỡng Phan Thiết </h3>
@@ -307,7 +319,7 @@
     <div class="mgTop30">
         <div class="swiper-container swiper-container-construct mgTop30">
             <div class="swiper-wrapper swiper-wrapper-construct">
-                <div class="block-slider swiper-slide swiper-slide-construct mgRight">
+                <div class="block-slider swiper-slide swiper-slide-construct mgRight10">
                     <div class="block-slider-inner">
                         <img src="assets/images/slider/slider_02.jpg" alt="Slider" width="100%">
                         <div class="block-info padding20-46-30-15 backgroundWhite">
@@ -316,7 +328,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block-slider swiper-slide swiper-slide-construct mgRight">
+                <div class="block-slider swiper-slide swiper-slide-construct mgRight10">
                     <div class="block-slider-inner">
                         <img src="assets/images/slider/slider_02.jpg" alt="Slider" width="100%">
                         <div class="block-info padding20-46-30-15 backgroundWhite">
@@ -325,11 +337,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="block-slider swiper-slide swiper-slide-construct mgRight">
+                <div class="block-slider swiper-slide swiper-slide-construct mgRight10">
                     <div class="block-slider-inner">
                         <img src="assets/images/slider/slider_02.jpg" alt="Slider" width="100%">
                         <div class="block-info padding20-46-30-15 backgroundWhite">
-                            <h3 class="fnAsapRegular fn16">Xiêu lòng trước căn hộ 36m2 làm "đốn tim" cả vạn <người></người></h3>
+                            <h3 class="fnAsapRegular fn16">Xiêu lòng trước căn hộ 36m2 làm "đốn tim" cả vạn người</h3>
                             <h3 class="fnAsapBold fn14 mgTop30"><i data-icon="A" class="icon"></i> &nbsp;03/11/2017 - 03/12/2017</h3>
                         </div>
                     </div>
