--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
     <a href="video_category.html">Video category</a>
     <a href="naptien.html">Nap tien</a>
     <a href="duan.html">Du an</a>
+    <a href="duan_detail.html">Du an chi tiet</a>
+    <a href="nhadatban.html">Nha dat ban</a>
+    <a href="nhadatban_chitiet.html">Nha dat ban chi tiet</a>
+    <a href="home_video_detail.html">Video chi tiet</a>
+    <a href="doanhnghiep.html">Doanh nghiep tieu bieu</a>
+    <a href="doanhnghiep_chitiet.html">Doanh nghiep chi tiet</a>
 </body>
 </html>
