--- a/index1.html
+++ b/index1.html
@@ -324,7 +324,7 @@
 </div>
 <div class="slider-container-inner main padding30-15">
     <div class="head-slider padding30-15">
-        <h3 class="text-upper fn19 borderBottom">tin rao nhà đất nổi bật</h3>
+        <h3 class="text-upper fn16 borderBottom borderBottom">tin rao nhà đất nổi bật</h3>
         <div class="title-news">
             <h2 class="text-upper fnAsapRegular fn14 colorYellow"><a href="" class="borderBottom">xem tất cả</a></h2>
         </div>
@@ -363,8 +363,8 @@
     <img src="assets/images/homepage/ver02/banner_02.jpg" alt="" width="100%">
 </div>
 
-<div class="slider-container-inner padding16-30 footer mgBottom30 main">
-    <div class="head-slider padding30-15">
+<div class="slider-container-inner padding0-15 footer mgBottom30 main">
+    <div class="head-slider">
         <h3 class="fn16 fnAsapMedium colorYellow text-upper fn16"><i data-icon="u" class="icon"></i> &nbsp; Tin Rao Nhà Đất Mới</h3>
         <div class="title-news">
             <h2 class="text-upper fnAsapRegular fn14 colorYellow"><a href="" class="borderBottom">xem tất cả</a></h2>
