--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     List: <br>
     <a href="index1.html">Index</a>
     <a href="home_new.html">Home new</a>
+    <a href="home_new_detail.html">Home new detail</a>
     <a href="registry.html">Registry</a>
     <a href="login.html">Login</a>
     <a href="nhadatban.html">Nha dat ban</a>
