--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
     List: <br>
+
+    Nha dat: <br>
+
     <a href="index1.html">Index</a>
     <a href="home_new.html">Home new</a>
     <a href="home_new_detail.html">Home new detail</a>
-    <a href="registry.html">Registry</a>
-    <a href="login.html">Login</a>
     <a href="nhadatban.html">Nha dat ban</a>
     <a href="video_category.html">Video category</a>
     <a href="naptien.html">Nap tien</a>
@@ -26,5 +27,15 @@
     <a href="home_video_detail.html">Video chi tiet</a>
     <a href="doanhnghiep.html">Doanh nghiep tieu bieu</a>
     <a href="doanhnghiep_chitiet.html">Doanh nghiep chi tiet</a>
+
+    Manager: <br>
+
+    <a href="registry.html">Registry</a>
+    <a href="login.html">Login</a>
+    <a href="profile.html">Profile</a>
+    <a href="profile_information.html">Profile information</a>
+    <a href="change_password.html">Doi mat khau</a>
+    <a href="sodu.html">So du</a>
+    <a href="dangtin.html">Dang tin</a>
 </body>
 </html>
